--- a/index.html
+++ b/index.html
@@ -202,21 +202,21 @@
                                 <div class="col-md-12">
 
                                     <div class="portfolio-border clearfix">
-                                        <img  src="./img/project3.png" alt="" class="project_img2">
+                                        <img  src="./img/dauni_cover.jpg" alt="" class="project_img2">
                                     </div>
                                     <div class="portfolio_item">
                                         <div class="item_info">
 
                                             <div class="project_btn_box">
-                                                <a href="#" target="_blank" class="project_btn">
+                                                <a href="https://midnightblue655.github.io/sangsepage/" target="_blank" class="project_btn">
                                                     View More</a>
 
 
                                                 <!-- <a href="#" target="_blank" class="project_btn">Mobile Design</a>
                                                         <a href="#" class="project_btn">Video</a> -->
                                             </div>
-                                            <h3 class="h3_title">상세페이지</h3>
-                                            <p class="project_text">상세페이지 소개
+                                            <h3 class="h3_title">다우니</h3>
+                                            <p class="project_text">다우니 섬유유연제 제품을 화사하고 산뜻하게 리디자인 해보았습니다.
                                             </p>
                                         </div>
                                     </div>
